// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Button/ButtonSegmented Compact 1`] = `
<div
  dir="ltr"
>
  <div
    aria-label="Group label"
    className="fd-segmented-button"
    role="group"
  >
    <button
      className="fd-button fd-button--compact"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Left
      </span>
    </button>
    <button
      className="fd-button fd-button--compact is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Middle
      </span>
    </button>
    <button
      className="fd-button fd-button--compact"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Right
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Button/ButtonSegmented Primary 1`] = `
<div
  dir="ltr"
>
  <div
    aria-label="Group label"
    className="fd-segmented-button"
    role="group"
  >
    <button
      className="fd-button"
      type="button"
    >
      <i
        className="sap-icon--survey"
      />
    </button>
    <button
      className="fd-button is-selected"
      selected={true}
      type="button"
    >
      <i
        className="sap-icon--pie-chart"
      />
    </button>
    <button
      className="fd-button"
      type="button"
    >
      <i
        className="sap-icon--pool"
      />
    </button>
  </div>
</div>
`;
